# ImageEdgeDetection

./: rapport.md
TP1/: CMakeLists.txt
TP1/Convolution/: convolution_compare  convolution_compare.cpp
TP1/Filtrage_median/: filtrage_median  filtrage_median.cpp
TP1/Interface/: UI.cpp
TP1/Transformation/: GeometricTransformations  GeometricTransformations.cpp  transformations  ui
TP1/histogramProcessing/: HistogramProcessing.cpp
TP1/test/: Makefile  main.cpp  test  test.pro
TP_Fevrier/: CMakeLists.txt  a.out  gradient_detection  gradient_detection.cpp  gradient_threshold  gradient_threshold.cpp  main.cpp  multi_directional_filters  multi_directional_filters.cpp  mywindow.cpp  mywindow.h  readme.md
